docs/sf-export/sfdx-raw/objects/Application_Log__c/Application_Log__c.object-meta.xml
<CustomObject>
    <description>This object stores the debug logs, exception, callout success and callout failure information using the Application Event from the apex class</description>
    <label>Application Log</label>
    <nameField>
        <displayFormat>Log-{0000}</displayFormat>
        <label>Application Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>