docs/sf-export/sfdx-raw/objects/Application_Log__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To store the application logs for the Account records</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Application Logs</relationshipLabel>
    <relationshipName>Application_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>