docs/sf-export/sfdx-raw/objects/Application_Log__c/fields/Callout_Data__c.field-meta.xml
<CustomField>
    <fullName>Callout_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To store the error/debug logs related to callout data object</description>
    <label>Callout Data</label>
    <referenceTo>Callout_Data__c</referenceTo>
    <relationshipLabel>Application Logs</relationshipLabel>
    <relationshipName>Application_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>