docs/sf-export/sfdx-raw/objects/Application_Log__c/fields/Callout_Data_Item__c.field-meta.xml
<CustomField>
    <fullName>Callout_Data_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To store the application logs for the callout date item records</description>
    <label>Callout Data Item</label>
    <referenceTo>Callout_Data_Item__c</referenceTo>
    <relationshipLabel>Application Logs</relationshipLabel>
    <relationshipName>Application_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>