docs/sf-export/sfdx-raw/objects/Application_Log__c/fields/Callout_End_Point__c.field-meta.xml
<CustomField>
    <fullName>Callout_End_Point__c</fullName>
    <label>Callout End Point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>