docs/sf-export/sfdx-raw/objects/Application_Log__c/fields/Callout_Request__c.field-meta.xml
<CustomField>
    <fullName>Callout_Request__c</fullName>
    <label>Callout Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>