docs/sf-export/sfdx-raw/objects/Application_Log__c/fields/Callout_Response__c.field-meta.xml
<CustomField>
    <fullName>Callout_Response__c</fullName>
    <label>Callout Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>