docs/sf-export/sfdx-raw/objects/Application_Log__c/fields/Convoso_List__c.field-meta.xml
<CustomField>
    <fullName>Convoso_List__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Convoso List</label>
    <referenceTo>Convoso_List__c</referenceTo>
    <relationshipLabel>Application Logs</relationshipLabel>
    <relationshipName>Application_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>