docs/sf-export/sfdx-raw/objects/Application_Log__c/fields/Draft__c.field-meta.xml
<CustomField>
    <fullName>Draft__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Draft</label>
    <referenceTo>Draft__c</referenceTo>
    <relationshipLabel>Application Logs</relationshipLabel>
    <relationshipName>Application_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>