docs/sf-export/sfdx-raw/objects/Application_Log__c/fields/Issue_Addressed__c.field-meta.xml
<CustomField>
    <fullName>Issue_Addressed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Issue Addressed</label>
    <type>Checkbox</type>
</CustomField>