docs/sf-export/sfdx-raw/objects/Application_Log__c/fields/Lead_Staging__c.field-meta.xml
<CustomField>
    <fullName>Lead_Staging__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Staging</label>
    <referenceTo>Lead_Staging__c</referenceTo>
    <relationshipLabel>Application Logs</relationshipLabel>
    <relationshipName>Application_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>