docs/sf-export/sfdx-raw/objects/Application_Log__c/fields/Legacy_CRM_Debt_Detail__c.field-meta.xml
<CustomField>
    <fullName>Legacy_CRM_Debt_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legacy CRM Debt Detail</label>
    <referenceTo>LegacyCRMDebtDetail__c</referenceTo>
    <relationshipLabel>Application Logs</relationshipLabel>
    <relationshipName>Application_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>