docs/sf-export/sfdx-raw/objects/Application_Log__c/fields/Legacy_CRM_Lead__c.field-meta.xml
<CustomField>
    <fullName>Legacy_CRM_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legacy CRM Lead</label>
    <referenceTo>LegacyCRMLead__c</referenceTo>
    <relationshipLabel>Application Logs</relationshipLabel>
    <relationshipName>Application_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>