docs/sf-export/sfdx-raw/objects/Application_Log__c/fields/Returned_All_Records__c.field-meta.xml
<CustomField>
    <fullName>Returned_All_Records__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Returned All Records</label>
    <type>Checkbox</type>
</CustomField>