docs/sf-export/sfdx-raw/objects/Application_Log__c/fields/Statement__c.field-meta.xml
<CustomField>
    <fullName>Statement__c</fullName>
    <label>Statement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>