docs/sf-export/sfdx-raw/objects/Application_Log__c/listViews/Callout_request_sent_to_MCA_Lender.listView-meta.xml
<ListView>
    <fullName>Callout_request_sent_to_MCA_Lender</fullName>
    <columns>NAME</columns>
    <columns>Statement__c</columns>
    <columns>Exception_Message__c</columns>
    <columns>Record_Id__c</columns>
    <columns>Log_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Callout_End_Point__c</field>
        <operation>equals</operation>
        <value>https://login.centrexsoftware.com/post/5c4ea5cd586652f279a579a76c54dbc5ddfb8ee0/</value>
    </filters>
    <label>Callout request sent to MCA Lender</label>
</ListView>