docs/sf-export/sfdx-raw/objects/Application_Log__c/listViews/Created_Today.listView-meta.xml
<ListView>
    <fullName>Created_Today</fullName>
    <columns>NAME</columns>
    <columns>Statement__c</columns>
    <columns>Exception_Message__c</columns>
    <columns>Legacy_CRM_Lead__c</columns>
    <columns>Log_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Created Today</label>
</ListView>