docs/sf-export/sfdx-raw/objects/Application_Log__c/listViews/Read_timed_out.listView-meta.xml
<ListView>
    <fullName>Read_timed_out</fullName>
    <columns>NAME</columns>
    <columns>Callout_End_Point__c</columns>
    <columns>Callout_Request__c</columns>
    <columns>Exception_Message__c</columns>
    <columns>Exception_Stacktrace__c</columns>
    <columns>Lead__c</columns>
    <columns>Log_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Exception_Message__c</field>
        <operation>equals</operation>
        <value>Read timed out</value>
    </filters>
    <label>Read timed out</label>
</ListView>