docs/sf-export/sfdx-raw/objects/Application_Log__c/listViews/SAS_GetDrafts.listView-meta.xml
<ListView>
    <fullName>SAS_GetDrafts</fullName>
    <columns>NAME</columns>
    <columns>Exception_Message__c</columns>
    <columns>Statement__c</columns>
    <columns>Log_Type__c</columns>
    <columns>Record_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Statement__c</field>
        <operation>equals</operation>
        <value>GetUpdatedDebits Callout request sent to SAS</value>
    </filters>
    <label>SAS GetDrafts</label>
</ListView>